--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>TATETI INICIO</title>
-    <link rel="stylesheet" type="text/css" href="inicioFinal.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 
@@ -23,7 +23,7 @@
         <input type="submit" style="background-color: #FF9900" value="COMENZAR A JUGAR">
     </form>
     <h3>¡ESPERO QUE TE DIVIERTAS!</h3>
-    <img src="imagenes/emoji.png" id="image1">
+    <img src="imagenes/emojiN.png" id="image1">
 </body>
 
 </html>
