Se agregó el header del inicio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <h1>TATETÍ</h1>
     <br>
-    <br>
     <form action="tatetiFinal.html" method="GET">
         <h2><label for="Usuario">INGRESE UN NOMBRE DE USUARIO</label></h2>
         <input type="text" pattern="[A-Za-z][A-Za-z0-9]*[0-9][A-Za-z0-9]*"
@@ -24,6 +23,10 @@
     </form>
     <h3>¡ESPERO QUE TE DIVIERTAS!</h3>
     <img src="imagenes/emojiN.png" id="image1">
+    <footer>
+        <br>
+        <h4>©2020 Luciano Riente</h4>
+    </footer>
 </body>
 
 </html>
