--- a/tatetiFinal.html
+++ b/tatetiFinal.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <h1>TATETÍ</h1>
+        <h1 id="title">TATETÍ</h1>
     </header>
 
     <h2>Computadora juega con: <span id="ficham"></span></h2>
@@ -23,15 +23,15 @@
     </section>
 
     <section id="tablero">
-        <a class="celda" id="ceroCero" onclick="jugadaHumano0();"></a>
-        <div class="celda" id="ceroUno" onclick="jugadaHumano1();"></div>
-        <div class="celda" id="ceroDos" onclick="jugadaHumano2();"></div>
-        <div class="celda" id="unoCero" onclick="jugadaHumano3();"></div>
-        <div class="celda" id="unoUno" onclick="jugadaHumano4();"></div>
-        <div class="celda" id="unoDos" onclick="jugadaHumano5();"></div>
-        <div class="celda" id="dosCero" onclick="jugadaHumano6();"></div>
-        <div class="celda" id="dosUno" onclick="jugadaHumano7();"></div>
-        <div class="celda" id="dosDos" onclick="jugadaHumano8();"></div>
+        <a class="celda" id="ceroCero" onclick="jugadaHumano0();verificarGanador();"></a>
+        <div class="celda" id="ceroUno" onclick="jugadaHumano1();verificarGanador();"></div>
+        <div class="celda" id="ceroDos" onclick="jugadaHumano2();verificarGanador();"></div>
+        <div class="celda" id="unoCero" onclick="jugadaHumano3();verificarGanador();"></div>
+        <div class="celda" id="unoUno" onclick="jugadaHumano4();verificarGanador();"></div>
+        <div class="celda" id="unoDos" onclick="jugadaHumano5();verificarGanador();"></div>
+        <div class="celda" id="dosCero" onclick="jugadaHumano6();verificarGanador();"></div>
+        <div class="celda" id="dosUno" onclick="jugadaHumano7();verificarGanador();"></div>
+        <div class="celda" id="dosDos" onclick="jugadaHumano8();verificarGanador();"></div>
     </section>
 
     <h4> <span id="cambio">Elija una letra </span> </h4>
