Se removió archivo .gitignore y se cambio el nombre de los archivos de inicio

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>TATETI INICIO</title>
-    <link rel="stylesheet" type="text/css" href="inicioFinal.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
