Se corrigieron algunas malas prácticas

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             id="Usuario" name="Usuario" required minlength="8" maxlength="15">
         <br>
         <br>
-        <input type="submit" style="background-color: #FF9900; font-weight:bold;" value="COMENZAR A JUGAR">
+        <input type="submit" id="submit-button" value="COMENZAR A JUGAR">
     </form>
     <h3>¡ESPERO QUE TE DIVIERTAS!</h3>
     <img src="imagenes/emoji.png" id="image1">
