Se le sacó el borde a los botones

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             id="Usuario" name="Usuario" required minlength="8" maxlength="15">
         <br>
         <br>
-        <input type="submit" id="submit-button" value="COMENZAR A JUGAR">
+            <input type="submit" id="submit-button" value="COMENZAR A JUGAR">
     </form>
     <h3>¡ESPERO QUE TE DIVIERTAS!</h3>
     <img src="imagenes/emoji.png" id="image1">
     <footer>
         <br>
-        <h4>©2020 Luciano Riente</h4>
+        <h4>&copy; 2020 Luciano Riente</h4>
     </footer>
 </body>
 
