Se sacó una variable innecesaria

--- a/tatetiFinal.html
+++ b/tatetiFinal.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1 id="title">TATETÍ</h1>
+        <h1>TATETÍ</h1>
     </header>
 
     <h2>Computadora juega con: <span id="ficham"></span></h2>
